--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,203 @@
-lmdb
-pyclipper~=1.3.0.post3
-shapely~=2.0.1
-addict
-numpy~=1.23.0
-tqdm>=4.64.1
-rapidfuzz>=2.13.7
-PyYAML>=6.0
-xml-python>=0.4.3
-packaging~=23.0
-Cython
-lanms>=1.0.2
-
-langchain~=0.0.224
-requests~=2.28.1
-pydantic~=1.10.11
-django~=4.2.3
-mindspore~=1.10.0
-scipy~=1.9.1
-djangorestframework~=3.14.0
+abstract_singleton==1.0.1
+aiohttp==3.8.5
+aiosignal==1.3.1
+anyio==3.7.1
+asgiref==3.7.2
+async-timeout==4.0.2
+asynctest==0.13.0
+attrs==23.1.0
+auto_gpt_plugin_template @ git+https://github.com/Significant-Gravitas/Auto-GPT-Plugin-Template@7612a14c629dc64ad870eee4d05850d60e1dd9ce
+autoflake==2.2.0
+backoff==2.2.1
+beautifulsoup4==4.12.2
+black==23.7.0
+blis==0.7.9
+cachetools==5.3.1
+catalogue==2.0.8
+certifi==2023.5.7
+cffi==1.15.1
+cfgv==3.3.1
+chardet==5.1.0
+charset-normalizer==3.2.0
+chroma-hnswlib==0.7.1
+chromadb==0.4.2
+click==8.1.6
+colorama==0.4.6
+coloredlogs==15.0.1
+confection==0.1.0
+coverage==7.2.7
+cryptography==41.0.2
+cssselect==1.2.0
+cymem==2.0.7
+dataclasses-json==0.5.13
+distlib==0.3.7
+distro==1.8.0
+Django==4.2.3
+djangorestframework==3.14.0
+dnspython==2.4.0
+docker==6.1.3
+duckduckgo-search==3.0.2
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl#sha256=0964370218b7e1672a30ac50d72cdc6b16f7c867496f1d60925691188f4d2510
+exceptiongroup==1.1.2
+execnet==2.0.2
+fastapi==0.99.1
+filelock==3.12.2
+flake8==6.0.0
+flatbuffers==23.5.26
+frozenlist==1.4.0
+ghp-import==2.1.0
+gitdb==4.0.10
+GitPython==3.1.31
+google-api-core==2.11.1
+google-api-python-client==2.94.0
+google-auth==2.22.0
+google-auth-httplib2==0.1.0
+google-search-results==2.4.2
+googleapis-common-protos==1.59.1
+greenlet==2.0.2
+gTTS==2.3.1
+h11==0.14.0
+httpcore==0.17.3
+httplib2==0.22.0
+httptools==0.6.0
+httpx==0.24.1
+humanfriendly==10.0
+identify==2.5.25
+idna==3.4
+importlib-resources==6.0.0
+inflection==0.5.1
+iniconfig==2.0.0
+isort==5.12.0
+Jinja2==3.1.2
+jsonschema==4.18.4
+jsonschema-specifications==2023.7.1
+langchain==0.0.240
+langcodes==3.3.0
+langsmith==0.0.14
+loguru==0.7.0
+lxml==4.9.3
+Markdown==3.3.7
+MarkupSafe==2.1.3
+marshmallow==3.20.1
+mccabe==0.7.0
+mergedeep==1.3.4
+mkdocs==1.4.3
+monotonic==1.6
+mpmath==1.3.0
+multidict==6.0.4
+murmurhash==1.0.9
+mypy==1.4.1
+mypy-extensions==1.0.0
+nodeenv==1.8.0
+numexpr==2.8.4
+numpy==1.25.1
+onnxruntime==1.15.1
+openai==0.27.2
+openapi-python-client==0.13.4
+openapi-schema-pydantic==1.2.4
+opencv-python==4.8.0.74
+orjson==3.8.10
+outcome==1.2.0
+overrides==7.3.1
+packaging==23.1
+pandas==2.0.3
+pathspec==0.11.1
+pathy==0.10.2
+Pillow==10.0.0
+pinecone-client==2.2.1
+platformdirs==3.9.1
+playsound==1.2.2
+pluggy==1.2.0
+posthog==3.0.1
+pre-commit==3.3.3
+preshed==3.0.8
+prompt-toolkit==3.0.39
+protobuf==4.23.4
+pulsar-client==3.2.0
+py-cpuinfo==9.0.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycodestyle==2.10.0
+pycparser==2.21
+pydantic==1.10.11
+pyflakes==3.0.1
+pylatexenc==2.10
+pymdown-extensions==10.1
+pyOpenSSL==23.2.0
+pyparsing==3.1.0
+PyPDF2==3.0.1
+PyPika==0.48.9
+pyreadline3==3.4.1
+PySocks==1.7.1
+pytest==7.4.0
+pytest-asyncio==0.21.1
+pytest-benchmark==4.0.0
+pytest-cov==4.1.0
+pytest-integration==0.2.3
+pytest-mock==3.11.1
+pytest-recording==0.12.2
+pytest-xdist==3.3.1
+python-dateutil==2.8.2
+python-docx==0.8.11
+python-dotenv==1.0.0
+pytz==2023.3
+pywin32==306
+PyYAML==6.0
+pyyaml_env_tag==0.1
+readability-lxml==0.8.1
+redis==4.6.0
+referencing==0.30.0
+regex==2023.6.3
+requests==2.31.0
+rpds-py==0.9.2
+rsa==4.9
+selenium==4.1.4
+shellingham==1.5.0.post1
+six==1.16.0
+smart-open==6.3.0
+smmap==5.0.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.4.1
+spacy==3.5.4
+spacy-legacy==3.0.12
+spacy-loggers==1.0.4
+SQLAlchemy==2.0.19
+sqlparse==0.4.4
+srsly==2.4.7
+starlette==0.27.0
+sympy==1.12
+tenacity==8.2.2
+thinc==8.1.10
+tiktoken==0.3.3
+tokenizers==0.13.3
+tomli==2.0.1
+tqdm==4.65.0
+trio==0.22.2
+trio-websocket==0.10.3
+typer==0.7.0
+types-beautifulsoup4==4.12.0.5
+types-colorama==0.4.15.11
+types-html5lib==1.1.11.14
+types-Markdown==3.4.2.9
+types-Pillow==10.0.0.1
+typing-inspect==0.9.0
+typing_extensions==4.7.1
+tzdata==2023.3
+uritemplate==4.1.1
+urllib3==1.26.16
+urllib3-secure-extra==0.1.0
+uvicorn==0.23.1
+vcrpy @ git+https://github.com/Significant-Gravitas/vcrpy.git@2f6fa05ae3518b1c0e92e63c3d12ecf5cf82cd48
+virtualenv==20.24.1
+wasabi==1.1.2
+watchdog==3.0.0
+watchfiles==0.19.0
+wcwidth==0.2.6
+webdriver-manager==3.8.6
+websocket-client==1.6.1
+websockets==11.0.3
+win32-setctime==1.1.0
+wrapt==1.15.0
+wsproto==1.2.0
+yarl==1.9.2
