--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,32 @@
 abstract_singleton==1.0.1
+addict==2.4.0
+aiofiles==23.1.0
 aiohttp==3.8.5
 aiosignal==1.3.1
+albumentations==1.3.0
+altair==4.2.2
+antlr4-python3-runtime==4.8
 anyio==3.7.1
 asgiref==3.7.2
+astor==0.8.1
+asttokens==2.2.1
+astunparse==1.6.3
 async-timeout==4.0.2
 asynctest==0.13.0
+attrdict==2.0.1
 attrs==23.1.0
 auto_gpt_plugin_template @ git+https://github.com/Significant-Gravitas/Auto-GPT-Plugin-Template@7612a14c629dc64ad870eee4d05850d60e1dd9ce
 autoflake==2.2.0
+Babel==2.12.1
+backcall==0.2.0
 backoff==2.2.1
+basicsr==1.4.2
+bce-python-sdk==0.8.83
+bcrypt==4.0.1
 beautifulsoup4==4.12.2
 black==23.7.0
 blis==0.7.9
+braceexpand==0.1.7
 cachetools==5.3.1
 catalogue==2.0.8
 certifi==2023.5.7
@@ -22,14 +37,22 @@ charset-normalizer==3.2.0
 chroma-hnswlib==0.7.1
 chromadb==0.4.2
 click==8.1.6
+clickhouse-connect==0.6.6
 colorama==0.4.6
 coloredlogs==15.0.1
+comm==0.1.3
 confection==0.1.0
+contourpy==1.1.0
 coverage==7.2.7
 cryptography==41.0.2
 cssselect==1.2.0
+cssutils==2.6.0
+cycler==0.11.0
 cymem==2.0.7
+Cython==0.29.35
 dataclasses-json==0.5.13
+debugpy==1.6.6
+decorator==5.1.1
 distlib==0.3.7
 distro==1.8.0
 Django==4.2.3
@@ -37,14 +60,22 @@ djangorestframework==3.14.0
 dnspython==2.4.0
 docker==6.1.3
 duckduckgo-search==3.0.2
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl#sha256=0964370218b7e1672a30ac50d72cdc6b16f7c867496f1d60925691188f4d2510
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl
+et-xmlfile==1.1.0
 exceptiongroup==1.1.2
 execnet==2.0.2
+executing==1.2.0
 fastapi==0.99.1
+ffmpy==0.3.0
 filelock==3.12.2
 flake8==6.0.0
+flask-babel==3.1.0
 flatbuffers==23.5.26
+fonttools==4.40.0
 frozenlist==1.4.0
+fsspec==2023.3.0
+gevent==22.10.2
+geventhttpclient==2.0.2
 ghp-import==2.1.0
 gitdb==4.0.10
 GitPython==3.1.31
@@ -54,9 +85,11 @@ google-auth==2.22.0
 google-auth-httplib2==0.1.0
 google-search-results==2.4.2
 googleapis-common-protos==1.59.1
+gradio==3.11.0
 greenlet==2.0.2
 gTTS==2.3.1
 h11==0.14.0
+hnswlib==0.7.0
 httpcore==0.17.3
 httplib2==0.22.0
 httptools==0.6.0
@@ -64,45 +97,82 @@ httpx==0.24.1
 humanfriendly==10.0
 identify==2.5.25
 idna==3.4
+imageio==2.9.0
+imgaug==0.4.0
+importlib-metadata==6.1.0
 importlib-resources==6.0.0
 inflection==0.5.1
 iniconfig==2.0.0
+invisible-watermark==0.1.5
+ipykernel==6.22.0
+ipython==8.11.0
 isort==5.12.0
+jedi==0.18.2
 Jinja2==3.1.2
 jsonschema==4.18.4
 jsonschema-specifications==2023.7.1
+jupyter_client==8.3.0
+jupyter_core==5.3.0
+kiwisolver==1.4.4
+kornia==0.6.0
 langchain==0.0.240
 langcodes==3.3.0
 langsmith==0.0.14
+lanms-neo==1.0.2
+lazy_loader==0.2
+Levenshtein==0.20.9
+linkify-it-py==2.0.0
+lmdb==1.4.0
 loguru==0.7.0
 lxml==4.9.3
+lz4==4.3.2
 Markdown==3.3.7
+markdown-it-py==2.2.0
 MarkupSafe==2.1.3
 marshmallow==3.20.1
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
 mccabe==0.7.0
+mdit-py-plugins==0.3.5
+mdurl==0.1.2
 mergedeep==1.3.4
+mindspore @ https://ms-release.obs.cn-north-4.myhuaweicloud.com/2.1.0/MindSpore/cpu/x86_64/mindspore-2.1.0-cp39-cp39-win_amd64.whl#sha256=24c539cbd31bf64c34dfcb4e61a7a9f5df9bfb5e87fd147421f0815d14c67828
 mkdocs==1.4.3
+mlc-ai-nightly @ file:///C:/Users/XIANAI/Downloads/mlc_ai_nightly-0.12.dev0-cp39-cp39-win_amd64.whl
 monotonic==1.6
 mpmath==1.3.0
 multidict==6.0.4
 murmurhash==1.0.9
 mypy==1.4.1
 mypy-extensions==1.0.0
+nest-asyncio==1.5.6
+networkx==3.1
 nodeenv==1.8.0
 numexpr==2.8.4
 numpy==1.25.1
+omegaconf==2.1.1
+onnx==1.13.1
 onnxruntime==1.15.1
+open-clip-torch==2.0.2
 openai==0.27.2
 openapi-python-client==0.13.4
 openapi-schema-pydantic==1.2.4
+opencv-contrib-python==4.6.0.66
 opencv-python==4.8.0.74
+opencv-python-headless==3.4.18.65
+openpyxl==3.1.2
 orjson==3.8.10
 outcome==1.2.0
 overrides==7.3.1
 packaging==23.1
+paddle2onnx==1.0.6
+paddlepaddle==2.4.2
 pandas==2.0.3
+paramiko==3.2.0
+parso==0.8.3
 pathspec==0.11.1
 pathy==0.10.2
+pickleshare==0.7.5
 Pillow==10.0.0
 pinecone-client==2.2.1
 platformdirs==3.9.1
@@ -110,19 +180,33 @@ playsound==1.2.2
 pluggy==1.2.0
 posthog==3.0.1
 pre-commit==3.3.3
+premailer==3.10.0
 preshed==3.0.8
+prettytable==3.6.0
 prompt-toolkit==3.0.39
 protobuf==4.23.4
+psutil==5.9.5
 pulsar-client==3.2.0
+pure-eval==0.2.2
 py-cpuinfo==9.0.0
+pyarrow==11.0.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+pyclipper==1.3.0.post4
 pycodestyle==2.10.0
 pycparser==2.21
+pycryptodome==3.17
 pydantic==1.10.11
+pydeck==0.8.0
+pyDeprecate==0.3.1
+pydub==0.25.1
 pyflakes==3.0.1
+Pygments==2.14.0
 pylatexenc==2.10
 pymdown-extensions==10.1
+Pympler==1.0.1
+PyMuPDF==1.20.2
+PyNaCl==1.5.0
 pyOpenSSL==23.2.0
 pyparsing==3.1.0
 PyPDF2==3.0.1
@@ -140,18 +224,32 @@ pytest-xdist==3.3.1
 python-dateutil==2.8.2
 python-docx==0.8.11
 python-dotenv==1.0.0
+python-Levenshtein==0.20.9
+python-multipart==0.0.6
+pytorch-lightning==1.5.0
 pytz==2023.3
+pytz-deprecation-shim==0.1.0.post0
+PyWavelets==1.4.1
 pywin32==306
 PyYAML==6.0
 pyyaml_env_tag==0.1
+pyzmq==25.0.2
+qudida==0.0.4
+rapidfuzz==3.1.2
 readability-lxml==0.8.1
 redis==4.6.0
 referencing==0.30.0
 regex==2023.6.3
 requests==2.31.0
+rfc3986==1.5.0
 rpds-py==0.9.2
 rsa==4.9
+scikit-image==0.20.0
+scikit-learn==1.3.0
+scipy==1.9.1
 selenium==4.1.4
+semver==2.13.0
+shapely==2.0.1
 shellingham==1.5.0.post1
 six==1.16.0
 smart-open==6.3.0
@@ -165,14 +263,27 @@ spacy-loggers==1.0.4
 SQLAlchemy==2.0.19
 sqlparse==0.4.4
 srsly==2.4.7
+stack-data==0.6.2
 starlette==0.27.0
+streamlit==1.12.1
+streamlit-drawable-canvas==0.8.0
 sympy==1.12
+tb-nightly==2.12.0a20230126
 tenacity==8.2.2
+test-tube==0.7.5
 thinc==8.1.10
+tifffile==2023.7.4
 tiktoken==0.3.3
 tokenizers==0.13.3
 tomli==2.0.1
+toolz==0.12.0
+torch==2.0.1+cu117
+torchaudio==2.0.2+cu117
+torchmetrics==0.6.0
+torchvision==0.15.2+cu117
+tornado==6.2
 tqdm==4.65.0
+traitlets==5.9.0
 trio==0.22.2
 trio-websocket==0.10.3
 typer==0.7.0
@@ -184,20 +295,27 @@ types-Pillow==10.0.0.1
 typing-inspect==0.9.0
 typing_extensions==4.7.1
 tzdata==2023.3
+tzlocal==4.3
+uc-micro-py==1.0.1
 uritemplate==4.1.1
 urllib3==1.26.16
 urllib3-secure-extra==0.1.0
 uvicorn==0.23.1
+validators==0.20.0
 vcrpy @ git+https://github.com/Significant-Gravitas/vcrpy.git@2f6fa05ae3518b1c0e92e63c3d12ecf5cf82cd48
 virtualenv==20.24.1
+visualdl==2.5.2
 wasabi==1.1.2
 watchdog==3.0.0
 watchfiles==0.19.0
 wcwidth==0.2.6
+webdataset==0.2.5
 webdriver-manager==3.8.6
 websocket-client==1.6.1
 websockets==11.0.3
 win32-setctime==1.1.0
 wrapt==1.15.0
 wsproto==1.2.0
+x2paddle==1.4.1
 yarl==1.9.2
+zipp==3.15.0
